<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projekt.RegisterActivity">

    <TextView
        android:id="@+id/registrationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:text="@string/registration"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationView"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:hint="@string/name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/userNameEditText"
        />

    <EditText
        android:id="@+id/passworEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/userEmailEditText"
        />

    <EditText
        android:id="@+id/passworAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/jelsz_meger_s_t_se"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/passworEditText"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/passworAgainEditText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:onClick="register"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/cancel"
            android:onClick="cancel"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



</RelativeLayout>