<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projekt.AruListaActivity">

    <Button
        android:id="@+id/monitorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="monitor"
        android:text="@string/monitors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/egerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="eger"
        android:text="@string/mouses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monitorButton"
        app:layout_constraintVertical_bias="0.158"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/billentyuzetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="billentyuzet"
        android:text="@string/keyboards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/egerButton"
        app:layout_constraintVertical_bias="0.216"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="20dp"
        android:onClick="vissza"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billentyuzetButton"
        tools:ignore="MissingConstraints,OnClick,UsingOnClickInXml"
        tools:layout_editor_absoluteY="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>